--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.67.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^10.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
