--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.11",
-    "@mui/material": "^5.14.11",
+   
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +19,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.67.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.11",
     "swiper": "^10.3.0",
     "web-vitals": "^2.1.4"
   },
