--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-
-
-
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,7 +15,10 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
+    "react-scrollspy-navigation": "^1.0.3",
     "react-slick": "^0.29.0",
+    "react-ui-scrollspy": "^2.3.0",
     "sass": "^1.67.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
